--- a/css/styles.css
+++ b/css/styles.css
@@ -4653,7 +4653,7 @@ fieldset:disabled .btn {
   font-size: 1.25rem;
   line-height: 1;
   background-color: transparent;
-  border: 0.125rem solid transparent;
+  border: none;
   border-radius: 0.5rem;
   transition: box-shadow 0.15s ease-in-out;
 }
@@ -4671,7 +4671,7 @@ fieldset:disabled .btn {
 .navbar-toggler:focus {
   text-decoration: none;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem;
+  /* box-shadow: 0 0 0 0.25rem; */
 }
 
 .navbar-toggler-icon {
@@ -12345,7 +12345,7 @@ html {
 }
 
 #mainNav .navbar-toggler {
-  font-size: 80%;
+  /* font-size: 80%; */
   padding: 0.8rem;
 }
 
@@ -12408,7 +12408,8 @@ html {
 }
 
 .masthead {
-  padding-top: calc(6rem + 74px);
+  /* padding-top: calc(6rem + 74px); */
+  padding-top: 6rem;
   padding-bottom: 6rem;
 }
 
@@ -12427,7 +12428,8 @@ html {
 
 @media (min-width: 992px) {
   .masthead {
-    padding-top: calc(6rem + 104px);
+    /* padding-top: calc(6rem + 104px); */
+    padding-top: 8rem;
     padding-bottom: 6rem;
   }
 
